@@ -51,10 +51,8 @@ This diagram gives on overview of the JVM:
 -   the bytecode of methods and constructors.
 -   a runtime constant pool per class loaded.
 
-상세서에서는 Heap영역에 메서드 영역을 구현하도록 강제하지 않았다. 예를 들어, 자바 7에서는 PermGen이라는 영역에 메서드 여역을 저장하였다.  PermGen은 힙처럼 JVM에 의해서 관리되는 공간으로 사용 공간의 제한이 있었다. 그러나 자바 8에서 
-The specifications don’t force to implement the method area in the heap. For example, until JAVA7, Oracle  **HotSpot**  used a zone called PermGen to store the Method Area. This  **PermGen**  was contiguous with the Java heap (and memory managed by the JVM like the heap) and was limited to a default space of 64Mo (modified by the argument -XX:MaxPermSize). Since Java 8, HotSpot now stores the Method Area in a separated native memory space called the  **Metaspace**, the max available space is the total available system memory.
+상세서에서는 Heap영역에 메서드 영역을 구현하도록 강제하지 않았다. 예를 들어, 자바 7에서는 PermGen이라는 영역에 메서드 여역을 저장하였다.  PermGen은 힙처럼 JVM에 의해서 관리되는 공간으로 사용 공간의 제한이 있었다. 그러나 자바 8에서 메서드 영역은 MetaSpace라 불리는, 사용 공간을 동적으로 할당하는 메모리 공간에 있다. 
 
-Note: There is a maximum size that the method area can’t exceed. If this limit is exceeded the JVM throws an  **OutOfMemoryError.**
 
 
 클래스 변수 중 참조 변수의 경우, 실제 객체는 Heap 영역에 저장된다. 단지 로드되는 변수는 Heap에 있는 객체의 주소값만을 가진다. 
@@ -132,7 +130,7 @@ The biggest advantage of the G1 GC is its  **performance**. It is faster than an
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzY2MzkwODIsMTI2MjM4MTM0LC0xNT
+eyJoaXN0b3J5IjpbLTE4MjAyMjY0NzcsMTI2MjM4MTM0LC0xNT
 c1MjMzNDE2LDQ3Njk2MzkxMCw2MzExMDM4MzYsLTk4MDI1NTkz
 LDcyNzg5MTgwNywxNzMxOTM2MTUzLC0xNzkyNDc0ODA4LDEzMT
 k2Mzg5MDQsLTE3MjIxMDgzODUsMTIwMzUwNTkzNF19
